--- a/src/style/layout/header.scss
+++ b/src/style/layout/header.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   position: fixed;
   background-color: white;
-  z-index: 5;
+  z-index: 999;
   width: 100vw;
   @include strokeBottom;
 }
